--- a/cloudnet.service
+++ b/cloudnet.service
@@ -9,6 +9,8 @@ Group=root
 Type=simple
 WorkingDirectory=/home/cloudnet
 ExecStart=/home/cloudnet/start.sh
+Restart=always
+RestartSec=30
 
 [Install]
 WantedBy=multi-user.target
